Style fix for vertical and horizontal search bar overflow

--- a/resources/style/remake/app-toolbar.scss
+++ b/resources/style/remake/app-toolbar.scss
@@ -52,4 +52,10 @@
 .searchbar {
   padding: 0.25rem;
   flex-grow: 1;
+  min-width: 3rem;
+
+  > .input {
+    max-height: 2rem;
+    overflow: hidden auto;
+  }
 }
